--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,22 +1,28 @@
-/*Comment - not visible in page*/
-/***************************************
-*
-* Author: Sosna 
-* Date: 23.01.2020
-*
-****************************************/
+/* TARGETING ELEMENTS / TAGS */
 
-/*Style all P tags*/
+p{
 
-#header p{
-    font-size: 18px;
-    color: violet;
+    font-size: 12px;
+    color: red;
+}
+
+a{
+
+text-decoration: underline;
+color: blue;
 }
 
 
-/* Style all header tags */
+span{
+
+text-transform: uppercase;
+}
 
 h1{
+    font-size: 32px;
+}
 
-    font-size: 44px;
+div{
+    width: 100%;
+    background-color: grey;
 }
