--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,28 +1,19 @@
 /* TARGETING ELEMENTS / TAGS */
+h2{
+font-size: 24px;
 
-p{
+}
 
-    font-size: 12px;
+#content-header{   /*for ID's */
+    font-size: 18px;
     color: red;
 }
 
-a{
-
-text-decoration: underline;
-color: blue;
+span{               
+    display: block;
+    color: blue;
 }
 
-
-span{
-
-text-transform: uppercase;
-}
-
-h1{
-    font-size: 32px;
-}
-
-div{
-    width: 100%;
-    background-color: grey;
-}
+.deck{          /*for classes */
+     color: green;
+}           
