--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,8 +1,16 @@
-/* CONFLICTS AND THE CASCADE| BOTTOM MOST RULE ALWAYS WINS */
-     span {
-color: blue;
-     }
+body {
+    color: red;
+}
 
-     span{
-color: red;
-     }
+div{
+    color: blue;
+}
+
+p{
+    color: green;
+}
+
+a{
+    color: yellow;
+    text-decoration: underline;
+}
