--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,11 @@
-span[class]{
+span[class~="deck"]{
     color: purple;
 }
 
 div[id]{
     background: grey;
+}
+
+a[title="Search engine"]{
+    color: red;
 }
