--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,11 @@
 a:hover{
-    color:red; /*:(dwukropek) oznacza Pseudo class np. keyword, hover itd */
+    color: red;
 }
 
-#main-content:hover{
-    background: green;
+a:active{
+    color: orange;
+}
+
+a:visited{
+    color:purple;
 }
