--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,3 @@
-article p:first-of-type{
-font-weight: bold;
-    }
-
-    article p:last-of-type{
-        color: red;
-    }
+li:nth-child(1), li:nth-child(7){
+    font-weight: bold;
+}
