--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,3 +1,12 @@
 li:nth-child(1), li:nth-child(7){
     font-weight: bold;
 }
+
+li:nth-child(even){
+    background: grey; /* even czyli weźmie pod uwagę co drugą linijke */
+}
+
+li:nth-child(odd){
+    background: pink; /* odd czyli weźmie pod uwagę 1..3..5 linijke */
+}
+
