--- a/css/syntax.css
+++ b/css/syntax.css
@@ -2,11 +2,6 @@ li:nth-child(1), li:nth-child(7){
     font-weight: bold;
 }
 
-li:nth-child(even){
-    background: grey; /* even czyli weźmie pod uwagę co drugą linijke */
+li:nth-child(3n + 1){
+    color: green;
 }
-
-li:nth-child(odd){
-    background: pink; /* odd czyli weźmie pod uwagę 1..3..5 linijke */
-}
-
