--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,11 @@
-*{  /* symbol * jest tzw universal selector, wskazuje na wszystkie tagi */
-    margin: 0;
-    padding: 0;
-    color: black;
-
+article{
+    font-size: 16px;
 }
 
+article h2{
+    font-size: 4em;
+}
+
+article p{
+    font-size: 80%; 
+}
