--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,11 +1,7 @@
-article{
-    font-size: 16px;
+article h2, article p{
+    font-family: ekstraczcionka, eloczcionka, serif; 
 }
 
-article h2{
-    font-size: 4em;
-}
-
-article p{
-    font-size: 80%; 
+a{
+    text-decoration: overline;
 }
