--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,8 @@
-article h2, article p{
-    font-family: ekstraczcionka, eloczcionka, serif; 
+h1{
+    font-weight: normal; 
 }
 
-a{
-    text-decoration: overline;
+p{
+    font-weight: 900; /*grubość czcionki */
+    font-family: "Helvetica";
 }
