--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,8 +1,11 @@
-h1{
-    font-weight: normal; 
+#header p{
+    text-transform: capitalize;
 }
 
-p{
-    font-weight: 900; /*grubość czcionki */
-    font-family: "Helvetica";
+body{
+    text-transform: uppercase;
+}
+
+body > p{ /*wszystkie tagi p pod tagiem body zostaną zmodyfikowane */
+    text-transform: none;
 }
