--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,5 +1,7 @@
-p{
-    font-size: 12px;
-    line-height: 1.5em;
+.box{
+    margin: 40px;
+    padding: 20px;
+    border: 1px solid #000;
+    width: 322px;
 }
 
