--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,7 @@
 .box{
-    margin: 40px;
-    padding: 20px;
+    margin: 30px 25%; /*auto to znaczy, że wrzuci box na środek strony*/
+    padding: 30px;
     border: 1px solid #000;
-    width: 322px;
+    width: 50%;
 }
 
