--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,7 @@
 .box{
-    margin: 30px 25%; /*auto to znaczy, że wrzuci box na środek strony*/
-    padding: 30px;
+    margin: 30px; /*auto to znaczy, że wrzuci box na środek strony*/
+    padding: 30px auto;
     border: 1px solid #000;
-    width: 50%;
+    
 }
 
