--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,17 @@
 .box{
-    margin: 30px; /*auto to znaczy, że wrzuci box na środek strony*/
-    padding: 30px auto;
     border: 1px solid #000;
-    
+    padding: 20px;
+    /*margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 5px;
+    margin-bottom: 2px;
+    padding-top: 10px;  inny sposób ustalania granic
+    padding-left: 20px;
+    padding-right: 5px;
+    padding-bottom: 2px; */ 
+}
+
+.small{
+    padding-left: 5px;
 }
 
