--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,17 +1,47 @@
 .box{
-    border: 1px solid #000;
     padding: 20px;
-    /*margin-top: 10px;
-    margin-left: 20px;
-    margin-right: 5px;
-    margin-bottom: 2px;
-    padding-top: 10px;  inny sposób ustalania granic
-    padding-left: 20px;
-    padding-right: 5px;
-    padding-bottom: 2px; */ 
+    margin: 20px;
+    float: left;
+
+    /*
+    border-top-width: 10px;
+    border-top-style: solid;
+    border-top-color: blue;
+    */
+    /*border-top: 10px solid blue;*/
+
 }
 
-.small{
-    padding-left: 5px;
+.dashed{
+    border: 12px blue dashed;
+
 }
 
+.dotted{
+    border: 12px blue dotted;
+}
+
+.double{
+    border: 12px blue double;
+}
+
+.groove{
+    border: 12px blue groove;
+}
+
+.inset{
+    border: 12px blue inset;
+}
+
+.outset{
+    border: 12px blue outset;
+}
+
+.ridge{
+    border: 12px blue ridge;
+}
+
+.solid{
+    border: 12px blue solid;
+}
+    
