--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,22 +1,12 @@
-#main-content div{
-background-color: #ccc;
-margin: 0 0 20px 0;
-}
 
 .static-width{
     width: 300px;
-    height: 100px;
-    border-radius: 40px;
-}
+    height: 300px;
+    background-color: #606060;
+    background-image: url(https://www.smallbizgenius.net/wp-content/uploads/2019/11/smallbizgenius_favicon.png);
+    background-repeat: no-repeat;
+    background-position:bottom center; /*możemy pozycjonować orbazek zgodnie z poprzednią zasadą */
+    background-size: 70px; /*wielkosc obrazka */
+}                                      /* np 10px 20px 5px 10px, góra,prawo,dół, lewo*/
 
-.percentage-width {
-    width: 70%;
-    height: 50px;
-    border-radius: 5px 10px 20px 40px;
-}
 
-.inline-block{
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-}
