--- a/css/syntax.css
+++ b/css/syntax.css
@@ -2,11 +2,8 @@
 .static-width{
     width: 300px;
     height: 300px;
-    background-color: #606060;
-    background-image: url(https://www.smallbizgenius.net/wp-content/uploads/2019/11/smallbizgenius_favicon.png);
-    background-repeat: no-repeat;
-    background-position:bottom center; /*możemy pozycjonować orbazek zgodnie z poprzednią zasadą */
-    background-size: 70px; /*wielkosc obrazka */
-}                                      /* np 10px 20px 5px 10px, góra,prawo,dół, lewo*/
-
+    background: url(https://www.smallbizgenius.net/wp-content/uploads/2019/11/smallbizgenius_favicon.png) no-repeat top center;
+    background-color: #606060;  
+    background-size: 100px;
+}
 
