--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,14 +1,35 @@
-
-#banner{
-    background-color: #606060;
-    width: 100%;
-    height: 300px;
-    background-image: url(https://icm.aexp-static.com/shopamex/img/global-images/lgo-shop-small-stroke2x.png), url(https://www.smallbizgenius.net/wp-content/uploads/2019/11/smallbizgenius_favicon.png);
-    background-repeat: no-repeat;
-    background-position: center, top left;
-    background-size: 300px, 100%; 
+#circle{
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    background: rgb(200,200,100);
+    border-radius: 200px;
+    top: 50px;
+    left: 50px;
+    opacity: 1; /*opacity - przezroczystosc */
+    text-align: center;
 }
 
-/* https://icm.aexp-static.com/shopamex/img/global-images/lgo-shop-small-stroke2x.png */
-/* https://www.smallbizgenius.net/wp-content/uploads/2019/11/smallbizgenius_favicon.png */  
-/* pierwszy link jest na wierzchu a drugi na spodzie */
+#circle-2{
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    background: rgb(200,100,200);
+    border-radius: 200px;
+    top: 250px;
+    left: 150px;
+    opacity: 0.3;
+    text-align: center;
+}
+
+#circle-3{
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    background: rgb(100,200,200,0.1);
+    border-radius: 200px;
+    top: 50px;
+    left: 250px;
+    opacity: 0.1;
+    text-align: center;
+}
